editors/tree-sitter-webfluent/grammar.js
    source_file: ($) => repeat($._declaration),

    // ─── Declarations ───────────────────────────────────────────────────

    _declaration: ($) =>
      choice(
        $.page_declaration,
        $.component_declaration,
        $.store_declaration,
        $.theme_declaration,
        $.app_declaration,
        $.type_declaration,
        $.enum_declaration,
        $.const_declaration,
        $.data_declaration,
        $.api_declaration,
        $.animation_declaration,
        $.test_declaration,
      ),

    // `const API = "/api"`
    const_declaration: ($) =>
      seq(
        "const",
        field("name", $._name),
        optional(seq(":", field("type", $._type))),
        "=",
        field("value", $._expression),
      ),

    // `data posts = "posts.json"` — a file's JSON, a constant at build time;
    // `image hero = "hero.jpg"` — a picture the build processes.
    page_declaration: ($) =>
      seq(
        "page",
        field("name", $._declaration_name),
        optional(field("attributes", $.page_attributes)),
        field("body", $.block),
      ),

    page_attributes: ($) => seq("(", sepBy(choice($.route_parameter, $.named_argument), ","), ")"),

    // `id: String` — a route parameter, told from an attribute by its type;
    // `String` is also a name an expression may be, so the parameter wins
    // where both readings survive.
    // Its type is never refined: `layout: Shell(crumb: "Blog")` is a call,
    // and a refined type written there would read as the same shape.
    store_declaration: ($) =>
      seq(
        "store",
        field("name", $._name),
        // `store Cart(scope: .route, eager: true)`
        optional(field("options", $.arguments)),
        field("body", $.block),
      ),

    _declaration_name: ($) => choice($._name, $.builtin_component),

    _name: ($) => choice($.identifier, $.component_identifier),

    // ─── Parameters and types ───────────────────────────────────────────

    parameter_list: ($) => seq("(", sepBy($.parameter, ","), ")"),

    // `_ label: String` marks the one positional prop.
    _type: ($) =>
      choice($.builtin_type, $.list_type, $.optional_type, $.refined_type, $.named_type),

    // `Number(1..=30)`, `String(minLength: 8)`, `Date(after: @2026-01-01)` —
    // a type with a condition its values must meet.
    builtin_type: (_) => choice("String", "Number", "Bool", "Map", "Any"),

    block: ($) => braced($, repeat(seq($._statement, optional(";")))),

    _statement: ($) =>
      choice(
        $.state_declaration,
        $.derived_declaration,
        $.effect_declaration,
        $.action_declaration,
        $.use_declaration,
        $.resource_declaration,
        $.validate_declaration,
        $.connection_declaration,
        $.event_declaration,
        $.slot_declaration,
        $.part_declaration,
        $.timer_statement,
        $.cleanup_block,
        $.head_block,
        $.expect_statement,
        $.act_statement,
        $.let_declaration,
        $.try_statement,
        $.if_statement,
        $.for_statement,
        $.show_statement,
        $.sequence_statement,
        $.match_statement,
        $.navigate_statement,
        $.log_statement,
        $.return_statement,
        $.emit_statement,
        $.children,
        $.event_handler,
        $.style_block,
        $.transition_block,
        $.slot_fill,
        $.call_statement,
        $.element,
        $.assignment,
        $.expression_statement,
      ),

    // `state n = 0`; `persist theme = "light"` is kept across visits, and
    // may say where, at what version, and how an older value is brought
    // forward.
    state_declaration: ($) =>
      seq(
        choice("state", "persist"),
        field("name", $._name),
        optional(seq(":", field("type", $._type))),
        "=",
        field("value", $._expression),
        // Only a `persist` carries one, and the parser knows it from the
        // keyword; here it is the brace that follows the value.
        optional(field("policy", $.persist_policy)),
      ),

    derived_declaration: ($) =>
      seq(
        "derived",
        field("name", $._name),
        optional(seq(":", field("type", $._type))),
        "=",
        field("value", $._expression),
      ),

    // `validate email { required  minLength(8) "Use at least 8"  async "Taken" { … } }`
    effect_declaration: ($) => seq("effect", field("body", $.block)),

    action_declaration: ($) =>
      seq(
        "action",
        field("name", $._name),
        field("parameters", $.parameter_list),
        field("body", $.block),
      ),

    use_declaration: ($) => seq("use", field("store", $._name)),

    // `resource rows = fetch(url, method: "POST")`
    let_declaration: ($) =>
      seq(
        "let",
        choice(
          seq(field("name", $._name), optional(seq(":", field("type", $._type)))),
          // `let { a, b } = m`, `let [x, y] = l`
          field("pattern", $.destructuring_pattern),
        ),
        "=",
        field("value", $._expression),
      ),

    navigate_statement: ($) => seq("navigate", "(", $._expression, ")"),

    log_statement: ($) => seq("log", "(", $._expression, ")"),

    // `return` alone at the end of a block, or `return expr`.
    return_statement: ($) => prec.right(seq("return", optional($._expression))),

    // `emit toggle(todo.id)`
    if_statement: ($) =>
      prec.right(
        seq(
          "if",
          choice(
            field("condition", $._expression),
            field("binding", $.if_let),
          ),
          field("consequence", $.block),
          optional(field("alternative", $.else_clause)),
        ),
      ),

    // `if let hint = expr { }`, or `if let hint { }` for a name in scope.
    else_clause: ($) => seq("else", choice($.if_statement, $.block)),

    // `for item, i in items by item.id { }`
    for_statement: ($) =>
      seq(
        "for",
        field("item", $._name),
        optional(seq(",", field("index", $._name))),
        "in",
        field("iterable", $._expression),
        optional(seq("by", field("key", $._expression))),
        field("body", $.block),
      ),

    show_statement: ($) =>
      seq("show", field("condition", $._expression), field("body", $.block)),

    // `sequence { step { … } step(after: "120ms") { … } }` — orchestration,
    // which the compiler lowers to a `delay:` on each step's elements.
    _arm_pattern: ($) =>
      choice(
        $.loading_pattern,
        $.error_pattern,
        $.ready_pattern,
        $.state_pattern,
        $.case_pattern,
        $.else_pattern,
      ),

    case_pattern: ($) =>
      seq($.enum_case, optional(seq("(", sepBy1(field("binding", $._name), ","), ")"))),

    else_pattern: (_) => "else",

    // ─── Elements ───────────────────────────────────────────────────────

    // `Card.elevated { … }`, `Button("Save").primary.lg { on click { } }`,
    // `Table.Row { }`, `UserCard(name: "x")`, `Router`.
    element: ($) =>
      prec.right(
        PREC.element,
        seq(
          field("name", $._element_name),
          optional(field("arguments", $.argument_list)),
          repeat(field("flag", $.flag)),
          optional(field("body", $.block)),
        ),
      ),

    _element_name: ($) => choice($.part, $.builtin_component, $.component_identifier),

    // `Table.Row`, `Card.Header`: a part of a built-in, or `Panel.Header`,
    // a part a component of the project declares — capitalised after the dot.
    builtin_component: (_) => prec(1, choice(...BUILTIN_COMPONENTS)),

    // ─── Arguments ──────────────────────────────────────────────────────

    // Element arguments: one positional value first, then `name: value`
    // pairs. The precedence settles `Foo(x)` at the start of a statement as
    // an element rather than a call.
    argument_list: ($) => prec(1, seq("(", sepBy($._argument, ","), ")")),

    _argument: ($) => choice($.named_argument, $._expression),

    named_argument: ($) =>
      seq(field("name", $.attribute_name), ":", field("value", $._expression)),

    // `bind`, `aria-pressed`, `data-tone`: hyphenated because an HTML
    // attribute may be.
    attribute_name: ($) => seq($.identifier, repeat(seq("-", $.identifier))),

    // Call arguments; `name: value` is accepted so `t("greeting", name:
    // user.name)`, `fetch(url, method: "POST")` and `Todo(id: 1)` read as
    // one call each.
    arguments: ($) => seq("(", sepBy($._argument, ","), ")"),

    // ─── Events and slots ───────────────────────────────────────────────

    // `on click { }`, `on keydown(event) { }`, `on toggle(id) { }`.
    // `on click(e) { }`; `on key("ctrl+k") { }` names the key it answers to.
    assignment: ($) =>
      seq(
        field(
          "target",
          choice(
            $._name,
            $.member_expression,
            $.index_expression,
            $.store_member,
            // A state named `on`: the word is the event keyword only where a
            // handler can start, and a handler does not continue with `=`.
            alias("on", $.identifier),
          ),
        ),
        "=",
        field("value", $._expression),
      ),

    // A statement that is an expression does something: a call, a member
    // call, an `await`, or a bare name (a slot's content). A value — a
    // literal, an `if` or `match` value — is never a statement on its own,
    // which is what keeps `if a { go() }` the statement and `.lg { }`
    // after an element its flag and block.
    expression_statement: ($) =>
      prec.dynamic(
        1,
        choice(
          $.call_expression,
          $.member_expression,
          $.index_expression,
          $.unary_expression,
          $.identifier,
          $.component_identifier,
          $.builtin_component,
        ),
      ),

    // ─── Expressions ────────────────────────────────────────────────────

    _expression: ($) =>
      choice(
        $.range_expression,
        $.binary_expression,
        $.unary_expression,
        $.lambda,
        $.if_expression,
        $.match_expression,
        $._primary_expression,
      ),

    binary_expression: ($) => {
      const table = [
        [PREC.coalesce, "??"],
        [PREC.or, "||"],
        [PREC.and, "&&"],
        [PREC.equality, choice("==", "!=", "!==")],
        [PREC.comparison, choice("<", ">", "<=", ">=")],
        [PREC.additive, choice("+", "-")],
        [PREC.multiplicative, choice("*", "/", "%")],
      ];
      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(
            // @ts-ignore
            precedence,
            seq(
              field("left", $._expression),
              // @ts-ignore
              field("operator", operator),
              field("right", $._expression),
            ),
          ),
        ),
      );
    },

    unary_expression: ($) =>
      prec(
        PREC.unary,
        seq(field("operator", choice("!", "-", "await")), field("operand", $._expression)),
      ),

    // `event` is a keyword where a statement starts, so a handler's
    // `event.preventDefault()` names it by its keyword; everywhere else the
    // word lexes as a plain name.
    member_expression: ($) =>
      prec.left(
        PREC.postfix,
        seq(
          field("object", $._expression),
          // `?.` reads null through null.
          choice(".", "?."),
          // Any word may follow a dot — `item.action`, `Array.from`.
          field("property", $._name),
        ),
      ),

    index_expression: ($) =>
      prec.left(
        PREC.postfix,
        seq(
          field("object", $._expression),
          optional("?."),
          "[",
          field("index", $._expression),
          "]",
        ),
      ),

    // Only a name, a member, an index or another call is callable.
    call_expression: ($) =>
      prec.left(
        PREC.postfix,
        seq(
          field(
            "function",
            choice(
              $.identifier,
              $.component_identifier,
              $.builtin_type,
              // A declared `type Row` is built as `Row(id: 1)`, a built-in's name.
              $.builtin_component,
              $.member_expression,
              $.index_expression,
              $.call_expression,
            ),
          ),
          field("arguments", $.arguments),
        ),
      ),

    parenthesized_expression: ($) => seq("(", $._expression, ")"),

    // `x => expr` and `(a, b) => expr`.
    lambda: ($) =>
      prec.right(
        PREC.lambda,
        seq(
          field("parameters", choice($.identifier, $.lambda_parameters)),
          "=>",
          field("body", $._expression),
        ),
      ),

    lambda_parameters: ($) => seq("(", sepBy($.identifier, ","), ")"),

    // `if cond { a } else { b }` as a value, chained with `else if`. The
    // low precedence keeps `if a { go() }` at the start of a statement the
    // statement, whose block holds statements, not a value.
    if_expression: ($) =>
      prec(
        -2,
        seq(
          "if",
          choice(
            // `if let x = e { … }` binds the non-null value.
            seq("let", field("binding", $.identifier), "=", field("value", $._expression)),
            field("condition", $._expression),
          ),
          "{",
          field("consequence", $._expression),
          "}",
          // Without an `else` the value is `null` when the condition fails.
          optional(
            seq("else", choice($.if_expression, seq("{", field("alternative", $._expression), "}"))),
          ),
        ),
      ),

    // `match tone { .calm { 1 } else { 2 } }` as a value.
    match_expression: ($) =>
      prec(
        -2,
        seq("match", field("value", $._expression), "{", repeat($.match_expression_arm), "}"),
      ),

    match_expression_arm: ($) =>
      seq(field("pattern", $._arm_pattern), "{", field("value", $._expression), "}"),

    // `.primary`, `.calm` — a case of an enum, named by the prop or type.
    enum_case: ($) => seq(".", field("name", $._name)),

    // `.failed("boom")` — a case with its payload.
    design_token: (_) => token(seq("$", /[a-zA-Z_][a-zA-Z0-9_-]*/)),

    // ─── Literals ───────────────────────────────────────────────────────

    string: ($) => choice($._quoted_string, $.raw_string, $.block_string),

    _quoted_string: ($) =>
      seq(
        '"',
        repeat(choice($.string_content, $.escape_sequence, $.interpolation)),
        choice('"', alias(token.immediate(/\{"/), '"')),
      ),

    // `#"…"#`, with as many `#` as the text needs: no escapes, no splices,
    // so a sample of code goes in whole. One token, since what ends it is
    // the run of hashes it opened with.
    raw_string: (_) =>
      token(
        choice(
          seq('#"', repeat(choice(/[^"]/, /"[^#]/)), '"#'),
          seq('##"', repeat(choice(/[^"]/, /"[^#]/, /"#[^#]/)), '"##'),
        ),
      ),

    // `"""…"""` — escapes and splices, over as many lines as it likes.
    block_string: ($) =>
      seq(
        '"""',
        repeat(choice($.block_string_content, $.escape_sequence, $.interpolation)),
        '"""',
      ),

    block_string_content: (_) =>
      choice(
        token.immediate(prec(2, /([^"\\{]|"[^"]|""[^"])+/)),
        token.immediate(/\{[^a-zA-Z_"\\{\[(]/),
        token.immediate(/\{\\./),
      ),

    // A `{` opens an interpolation only when a name, a `[` or a `(` follows
    // it; `"{ a: 1 }"` and `"{"` are text, as they are for the compiler. A
    // `{` right before the closing quote is text too.
    // Precedence 2, above a `///` doc comment's 1: a string that begins
    // `"/// A doc comment…"` — a sample of code — is text, not a comment.
    escape_sequence: (_) => token.immediate(/\\./),

    // Its braces are the grammar's own tokens, not the scanner's: inside a
    // string or a style value they are not the writer's block braces.
