editors/tree-sitter-webfluent/test/corpus/expressions.txt
================================================================================
Binary operator precedence and null coalescing
================================================================================

store S {
    derived a = 1 + 2 * 3 - 4 / 2 % 1
    derived b = x < 1 && y >= 2 || !z
    derived c = a == b != c
    derived d = maybe ?? fallback ?? 0
}

--------------------------------------------------------------------------------

(source_file
  (store_declaration
    (component_identifier)
    (block
      (derived_declaration
        (identifier)
        (binary_expression
          (binary_expression
            (number)
            (binary_expression
              (number)
              (number)))
          (binary_expression
            (binary_expression
              (number)
              (number))
            (number))))
      (derived_declaration
        (identifier)
        (binary_expression
          (binary_expression
            (binary_expression
              (identifier)
              (number))
            (binary_expression
              (identifier)
              (number)))
          (unary_expression
            (identifier))))
      (derived_declaration
        (identifier)
        (binary_expression
          (binary_expression
            (identifier)
            (identifier))
          (identifier)))
      (derived_declaration
        (identifier)
        (binary_expression
          (binary_expression
            (identifier)
            (identifier))
          (number))))))

================================================================================
Unary operators and await
================================================================================

store S {
    derived a = -x
    derived b = !done
    action f() { let r = await load() }
}

--------------------------------------------------------------------------------

(source_file
  (store_declaration
    (component_identifier)
    (block
      (derived_declaration
        (identifier)
        (unary_expression
          (identifier)))
      (derived_declaration
        (identifier)
        (unary_expression
          (identifier)))
      (action_declaration
        (identifier)
        (parameter_list)
        (block
          (let_declaration
            (identifier)
            (unary_expression
              (call_expression
                (identifier)
                (arguments)))))))))

================================================================================
Member, index and call chains
================================================================================

store S {
    derived a = items.filter(i => i.done).map(i => i.title)[0].length
    derived b = Math.max(1, 2)
    derived c = t("greeting", name: user.name)
}

--------------------------------------------------------------------------------

(source_file
  (store_declaration
    (component_identifier)
    (block
      (derived_declaration
        (identifier)
        (member_expression
          (index_expression
            (call_expression
              (member_expression
                (call_expression
                  (member_expression
                    (identifier)
                    (identifier))
                  (arguments
                    (lambda
                      (identifier)
                      (member_expression
                        (identifier)
                        (identifier)))))
                (identifier))
              (arguments
                (lambda
                  (identifier)
                  (member_expression
                    (identifier)
                    (identifier)))))
            (number))
          (identifier)))
      (derived_declaration
        (identifier)
        (call_expression
          (member_expression
            (component_identifier)
            (identifier))
          (arguments
            (number)
            (number))))
      (derived_declaration
        (identifier)
        (call_expression
          (identifier)
          (arguments
            (string
              (string_content))
            (named_argument
              (attribute_name
                (identifier))
              (member_expression
                (identifier)
                (identifier)))))))))

================================================================================
Lambdas with one parameter, several, and a map body
================================================================================

store S {
    derived a = xs.map(x => x * 2)
    derived b = xs.reduce((acc, x) => acc + x, 0)
    derived c = xs.map((l, n) => { n: n + 1, t: l.t })
}

--------------------------------------------------------------------------------

(source_file
  (store_declaration
    (component_identifier)
    (block
      (derived_declaration
        (identifier)
        (call_expression
          (member_expression
            (identifier)
            (identifier))
          (arguments
            (lambda
              (identifier)
              (binary_expression
                (identifier)
                (number))))))
      (derived_declaration
        (identifier)
        (call_expression
          (member_expression
            (identifier)
            (identifier))
          (arguments
            (lambda
              (lambda_parameters
                (identifier)
                (identifier))
              (binary_expression
                (identifier)
                (identifier)))
            (number))))
      (derived_declaration
        (identifier)
        (call_expression
          (member_expression
            (identifier)
            (identifier))
          (arguments
            (lambda
              (lambda_parameters
                (identifier)
                (identifier))
              (object
                (pair
                  (identifier)
                  (binary_expression
                    (identifier)
                    (number)))
                (pair
                  (identifier)
                  (member_expression
                    (identifier)
                    (identifier)))))))))))

================================================================================
If and match as values
================================================================================

store S {
    derived a = if open { 1 } else if busy { 2 } else { 3 }
    derived b = match tone { .calm { 1 } .loud { 2 } else { 3 } }
}

--------------------------------------------------------------------------------

(source_file
  (store_declaration
    (component_identifier)
    (block
      (derived_declaration
        (identifier)
        (if_expression
          (identifier)
          (number)
          (if_expression
            (identifier)
            (number)
            (number))))
      (derived_declaration
        (identifier)
        (match_expression
          (identifier)
          (match_expression_arm
            (case_pattern
              (enum_case
                (identifier)))
            (number))
          (match_expression_arm
            (case_pattern
              (enum_case
                (identifier)))
            (number))
          (match_expression_arm
            (else_pattern)
            (number)))))))

================================================================================
Enum cases, design tokens and records
================================================================================

store S {
    state tone = .danger
    derived accent = $color-primary
    state todo = Todo(id: 1, title: "x")
}

--------------------------------------------------------------------------------

(source_file
  (store_declaration
    (component_identifier)
    (block
      (state_declaration
        (identifier)
        (enum_case
          (identifier)))
      (derived_declaration
        (identifier)
        (design_token))
      (state_declaration
        (identifier)
        (call_expression
          (component_identifier)
          (arguments
            (named_argument
              (attribute_name
                (identifier))
              (number))
            (named_argument
              (attribute_name
                (identifier))
              (string
                (string_content)))))))))

================================================================================
Strings with interpolation, escapes and literal braces
================================================================================

store S {
    derived a = "Hello, {name}! {count + 1} items"
    derived b = "quote \" and brace \{x\}"
    derived c = "{ a: 1 }"
    derived d = "function f() {"
}

--------------------------------------------------------------------------------

(source_file
  (store_declaration
    (component_identifier)
    (block
      (derived_declaration
        (identifier)
        (string
          (string_content)
          (interpolation
            (identifier))
          (string_content)
          (interpolation
            (binary_expression
              (identifier)
              (number)))
          (string_content)))
      (derived_declaration
        (identifier)
        (string
          (string_content)
          (escape_sequence)
          (string_content)
          (escape_sequence)
          (string_content)
          (escape_sequence)))
      (derived_declaration
        (identifier)
        (string
          (string_content)
          (string_content)))
      (derived_declaration
        (identifier)
        (string
          (string_content))))))

================================================================================
Arrays and maps with quoted and keyword keys
================================================================================

store S {
    state a = [1, 2, 3,]
    state b = { id: 1, "Content-Type": "json", action: "x", type: "y", }
}

--------------------------------------------------------------------------------

(source_file
  (store_declaration
    (component_identifier)
    (block
      (state_declaration
        (identifier)
        (array
          (number)
          (number)
          (number)))
      (state_declaration
        (identifier)
        (object
          (pair
            (identifier)
            (number))
          (pair
            (string
              (string_content))
            (string
              (string_content)))
          (pair
            (identifier)
            (string
              (string_content)))
          (pair
            (identifier)
            (string
              (string_content))))))))

================================================================================
Type names and built-in names as expressions
================================================================================

store S {
    derived a = Number("3")
    derived b = String(x)
    derived c = List.length
}

--------------------------------------------------------------------------------

(source_file
  (store_declaration
    (component_identifier)
    (block
      (derived_declaration
        (identifier)
        (call_expression
          (builtin_type)
          (arguments
            (string
              (string_content)))))
      (derived_declaration
        (identifier)
        (call_expression
          (builtin_type)
          (arguments
            (identifier))))
      (derived_declaration
        (identifier)
        (member_expression
          (builtin_component)
          (identifier))))))

================================================================================
Parenthesised expressions
================================================================================

store S {
    derived a = (x + y) * (z - 1)
}

--------------------------------------------------------------------------------

(source_file
  (store_declaration
    (component_identifier)
    (block
      (derived_declaration
        (identifier)
        (binary_expression
          (parenthesized_expression
            (binary_expression
              (identifier)
              (identifier)))
          (parenthesized_expression
            (binary_expression
              (identifier)
              (number))))))))

================================================================================
Optional chaining and if-let as a value
================================================================================

store S {
    derived a = user?.profile?.name ?? "anon"
    derived b = user?.tags?.[0]
    derived c = user?.name?.toUpperCase()
    derived d = if let u = user { u.name } else { "anon" }
}

--------------------------------------------------------------------------------

(source_file
  (store_declaration
    (component_identifier)
    (block
      (derived_declaration
        (identifier)
        (binary_expression
          (member_expression
            (member_expression
              (identifier)
              (identifier))
            (identifier))
          (string
            (string_content))))
      (derived_declaration
        (identifier)
        (index_expression
          (member_expression
            (identifier)
            (identifier))
          (number)))
      (derived_declaration
        (identifier)
        (call_expression
          (member_expression
            (member_expression
              (identifier)
              (identifier))
            (identifier))
          (arguments)))
      (derived_declaration
        (identifier)
        (if_expression
          (identifier)
          (identifier)
          (member_expression
            (identifier)
            (identifier))
          (string
            (string_content)))))))

================================================================================
Regex literals beside division
================================================================================

store S {
    derived ok = /^[a-z]+@[a-z.]+$/i.test(email)
    derived half = ratio / 2
    derived clean = name.replace(/\s+/g, " ")
}

--------------------------------------------------------------------------------

(source_file
  (store_declaration
    (component_identifier)
    (block
      (derived_declaration
        (identifier)
        (call_expression
          (member_expression
            (regex)
            (identifier))
          (arguments
            (identifier))))
      (derived_declaration
        (identifier)
        (binary_expression
          (identifier)
          (number)))
      (derived_declaration
        (identifier)
        (call_expression
          (member_expression
            (identifier)
            (identifier))
          (arguments
            (regex)
            (string
              (string_content))))))))

================================================================================
Match expression over a payload case
================================================================================

page P(path: "/") {
    derived r = match s { .failed(r) { r } .done { "done" } else { "-" } }
}

--------------------------------------------------------------------------------

(source_file
  (page_declaration
    (component_identifier)
    (page_attributes
      (named_argument
        (attribute_name
          (identifier))
        (string
          (string_content))))
    (block
      (derived_declaration
        (identifier)
        (match_expression
          (identifier)
          (match_expression_arm
            (case_pattern
              (enum_case
                (identifier))
              (identifier))
            (identifier))
          (match_expression_arm
            (case_pattern
              (enum_case
                (identifier)))
            (string
              (string_content)))
          (match_expression_arm
            (else_pattern)
            (string
              (string_content))))))))

================================================================================
Raw and block strings, and a formatted splice
================================================================================

const S = #"page Home(path: "/") { state n = 0 }"#
const T = ##"a "# inside"##
const N = """
    Dear {name},
      thank you.
    """
page P(path: "/") { Text("Total: {total:.currency}") }

--------------------------------------------------------------------------------

(source_file
  (const_declaration
    (component_identifier)
    (string (raw_string)))
  (const_declaration
    (component_identifier)
    (string (raw_string)))
  (const_declaration
    (component_identifier)
    (string
      (block_string
        (block_string_content)
        (interpolation (identifier))
        (block_string_content))))
  (page_declaration
    (component_identifier)
    (page_attributes
      (named_argument
        (attribute_name (identifier))
        (string (string_content))))
    (block
      (element
        (builtin_component)
        (argument_list
          (string
            (string_content)
            (interpolation
              (identifier)
              (format_spec (identifier)))))))))
